--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@ layout: compress
 
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ "/feed.xml" }}" />
-
+    <link rel="icon" href="https://umangsbhatt.github.io/assets/images/favicon/favicon.ico" />
     <style>
     {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
     {{ scss_sheet | scssify }}
