Changed project layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,10 @@
         {% endif %}
 
         <h1 class="title">{{ site.name }}</h1>
-        <h2 class="description">{{ site.bio }}</h2>
-
-        {% include social-links.html %}
+        {% if page.title != "Projects" %}
+            <h2 class="description">{{ site.bio }}</h2>
+            {% include social-links.html %}
+        {% endif %}
     </header>
 {% endif %}
 
